Spring Boot non-working example.